fixed autocomplete z-index, fixed newsSentiment graph bug

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -83,3 +83,5 @@
 	display: none;
 	width: 100%;
 }
+
+.ui-autocomplete { position: absolute; cursor: default;z-index:3000000 !important;}
